# credit_card_manager

./: .gitignore  README.md  pyproject.toml
authentication/: urls.py
authentication/serializers/: user_serializer.py
authentication/utils/: __init__.py  token_generator.py
authentication/views/: login_view.py  user_view.py
credit_card_management/: apps.py
credit_card_management/migrations/: 0001_initial.py  0002_purchase.py  0003_alter_purchase_category.py  0004_alter_purchase_firstinstallmentdate.py  0005_installment.py  0006_purchase_installments_paid_purchase_value_paid.py
credit_card_management/models/: __init__.py  category.py  installment.py  purchase.py
credit_card_management/serializers/: __init__.py  category_serializer.py  installment_serializer.py  purchase_serializer.py
credit_card_management/validators/: __init__.py  category_validator.py
credit_card_management/views/: __init__.py  category_viewset.py  installment_viewset.py  purchase_viewset.py
setup/: settings.py  urls.py
